sdk/v0.5.19/columnmetadata.mdx
---
title: "ColumnMetadata"
icon: "square-c"
description: "<a href=\"https://github.com/pixeltable/pixeltable/blob/main/pixeltable/catalog/table_metadata.py#L5\" id=\"viewSource\" target=\"_blank\" rel=\"noopener noreferrer\"><img src=\"https://img.shields.io/badge/View%20Source%20on%20Github-blue?logo=github&labelColor=gray\" alt=\"View Source on GitHub\" style={{ display: 'inline', margin: '0px' }} noZoom /></a>"
noindex: true
---
# <span style={{ 'color': 'gray' }}>class</span>&nbsp; pixeltable.ColumnMetadata


Metadata for a column of a Pixeltable table.

## <span style={{ 'color': 'gray' }}>attr</span>&nbsp; comment

```
comment: str
```

User-provided column comment.

## <span style={{ 'color': 'gray' }}>attr</span>&nbsp; computed_with

```
computed_with: str | None
```

Expression used to compute this column; `None` if this is not a computed column.

## <span style={{ 'color': 'gray' }}>attr</span>&nbsp; custom_metadata

```
custom_metadata: Any
```

User-defined JSON metadata for this column, if any.

## <span style={{ 'color': 'gray' }}>attr</span>&nbsp; defined_in

```
defined_in: str | None
```

Name of the table where this column was originally defined.

If the current table is a view, then `defined_in` may differ from the current table name.

## <span style={{ 'color': 'gray' }}>attr</span>&nbsp; is_primary_key

```
is_primary_key: bool
```

`True` if this column is part of the table's primary key.

## <span style={{ 'color': 'gray' }}>attr</span>&nbsp; is_stored

```
is_stored: bool
```

`True` if this is a stored column; `False` if it is dynamically computed.

## <span style={{ 'color': 'gray' }}>attr</span>&nbsp; media_validation

```
media_validation: Literal['on_read', 'on_write'] | None
```

The media validation policy for this column.

## <span style={{ 'color': 'gray' }}>attr</span>&nbsp; name

```
name: str
```

The name of the column.

## <span style={{ 'color': 'gray' }}>attr</span>&nbsp; type_

```
type_: str
```

The type specifier of the column.

## <span style={{ 'color': 'gray' }}>attr</span>&nbsp; version_added

```
version_added: int
```

The table version when this column was added.

